--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <header>header</header>
-    <div class="slider">
-        <h1>slide 1</h1>
-        <h1>slide 2</h1>
-        <footer>
-            all rights are reserved
-        </footer>
-    </div>
+    <header>
+        header
+    </header>
 </body>
 </html>
