login feature added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>
         header
     </header>
+    <span>skdjosdc</span>
     <div class="slider">
         <h1> slide 1</h1>
         <h1> slide 2</h1>
     </div>
+    <script src="/script.js"></script>
 </body>
 </html>
