--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header>
         header
     </header>
+    <div class="nanner">
+        <img src="lkj" alt="">
+    </div>
 </body>
 </html>
