--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-        header
+         new header
     </header>
+    <footer>
+        all rights are reserved 2020
+    </footer>
 </body>
 </html>
