--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <footer>
         all rights are reserved 2020
     </footer>
+    <div class="slider">
+        <h1>slide three</h1>
+    </div>
 </body>
 </html>
